connection test ok

--- a/etl.ipynb
+++ b/etl.ipynb
@@ -2,11 +2,50 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 10,
    "metadata": {
     "editable": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Collecting s3fs\n",
+      "  Downloading https://files.pythonhosted.org/packages/72/5c/ec84c7ec49fde2c3b0d885ecae4504fa40fc77fef7684e9f2939c50f9b94/s3fs-0.4.0-py3-none-any.whl\n",
+      "Collecting fsspec>=0.6.0 (from s3fs)\n",
+      "\u001b[?25l  Downloading https://files.pythonhosted.org/packages/dd/1f/7028dacd3c28f34ce48130aae73a88fa5cc27b6b0e494fcf2739f7954d9d/fsspec-0.6.2-py3-none-any.whl (62kB)\n",
+      "\u001b[K    100% |████████████████████████████████| 71kB 4.3MB/s ta 0:00:011\n",
+      "\u001b[?25hCollecting boto3>=1.9.91 (from s3fs)\n",
+      "\u001b[?25l  Downloading https://files.pythonhosted.org/packages/ff/b5/3595b837d2aaf45b93adb8db44bb4ed07c04b3ce9ff6c399350314c779d2/boto3-1.11.8-py2.py3-none-any.whl (128kB)\n",
+      "\u001b[K    100% |████████████████████████████████| 133kB 9.7MB/s eta 0:00:01\n",
+      "\u001b[?25hCollecting botocore>=1.12.91 (from s3fs)\n",
+      "\u001b[?25l  Downloading https://files.pythonhosted.org/packages/61/f3/f06005f90a09bbdd4bc6df76400f0ac279f7e1f556d635ab60fb1f916d1b/botocore-1.14.8-py2.py3-none-any.whl (5.9MB)\n",
+      "\u001b[K    100% |████████████████████████████████| 5.9MB 4.3MB/s eta 0:00:01    27% |████████▊                       | 1.6MB 25.5MB/s eta 0:00:01    71% |██████████████████████▉         | 4.2MB 29.3MB/s eta 0:00:01    96% |███████████████████████████████ | 5.7MB 33.2MB/s eta 0:00:01\n",
+      "\u001b[?25hCollecting s3transfer<0.4.0,>=0.3.0 (from boto3>=1.9.91->s3fs)\n",
+      "\u001b[?25l  Downloading https://files.pythonhosted.org/packages/c7/48/a8252b6b3cd31774eab312b19d58a6ac55f296240c206617dcd38cd93bf8/s3transfer-0.3.2-py2.py3-none-any.whl (69kB)\n",
+      "\u001b[K    100% |████████████████████████████████| 71kB 17.0MB/s ta 0:00:01\n",
+      "\u001b[?25hRequirement already satisfied: jmespath<1.0.0,>=0.7.1 in /opt/conda/lib/python3.6/site-packages (from boto3>=1.9.91->s3fs) (0.9.3)\n",
+      "Requirement already satisfied: docutils<0.16,>=0.10 in /opt/conda/lib/python3.6/site-packages (from botocore>=1.12.91->s3fs) (0.14)\n",
+      "Requirement already satisfied: urllib3<1.26,>=1.20 in /opt/conda/lib/python3.6/site-packages (from botocore>=1.12.91->s3fs) (1.22)\n",
+      "Requirement already satisfied: python-dateutil<3.0.0,>=2.1 in /opt/conda/lib/python3.6/site-packages (from botocore>=1.12.91->s3fs) (2.6.1)\n",
+      "Requirement already satisfied: six>=1.5 in /opt/conda/lib/python3.6/site-packages (from python-dateutil<3.0.0,>=2.1->botocore>=1.12.91->s3fs) (1.11.0)\n",
+      "\u001b[31mawscli 1.16.17 has requirement botocore==1.12.7, but you'll have botocore 1.14.8 which is incompatible.\u001b[0m\n",
+      "\u001b[31mawscli 1.16.17 has requirement s3transfer<0.2.0,>=0.1.12, but you'll have s3transfer 0.3.2 which is incompatible.\u001b[0m\n",
+      "Installing collected packages: fsspec, botocore, s3transfer, boto3, s3fs\n",
+      "  Found existing installation: botocore 1.12.7\n",
+      "    Uninstalling botocore-1.12.7:\n",
+      "      Successfully uninstalled botocore-1.12.7\n",
+      "  Found existing installation: s3transfer 0.1.13\n",
+      "    Uninstalling s3transfer-0.1.13:\n",
+      "      Successfully uninstalled s3transfer-0.1.13\n",
+      "  Found existing installation: boto3 1.9.7\n",
+      "    Uninstalling boto3-1.9.7:\n",
+      "      Successfully uninstalled boto3-1.9.7\n",
+      "Successfully installed boto3-1.11.8 botocore-1.14.8 fsspec-0.6.2 s3fs-0.4.0 s3transfer-0.3.2\n"
+     ]
+    }
+   ],
    "source": [
     "import configparser\n",
     "from datetime import datetime\n",
@@ -15,12 +54,13 @@
     "from pyspark.sql.functions import udf, col\n",
     "from pyspark.sql.functions import year, month, dayofmonth, hour, weekofyear, date_format\n",
     "import boto3\n",
-    "import pandas as pd"
+    "import pandas as pd\n",
+    "!pip install s3fs"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 2,
    "metadata": {
     "editable": true
    },
@@ -35,7 +75,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 33,
    "metadata": {
     "editable": true
    },
@@ -51,7 +91,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 34,
    "metadata": {
     "editable": true
    },
@@ -62,7 +102,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 35,
    "metadata": {
     "editable": true
    },
@@ -74,7 +114,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 36,
    "metadata": {
     "editable": true
    },
@@ -87,21 +127,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 37,
    "metadata": {
     "editable": true
    },
    "outputs": [],
    "source": [
     "sdlist = list()\n",
-    "prefix = 's3://udacity-dend/'\n",
+    "prefix = 's3a://udacity-dend/'\n",
     "for o in lcobj[2]:\n",
     "    sdlist.append(prefix+o[\"Key\"])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 38,
    "metadata": {
     "editable": true
    },
@@ -109,10 +149,10 @@
     {
      "data": {
       "text/plain": [
-       "'s3://udacity-dend/log_data/2018/11/2018-11-01-events.json'"
+       "'s3a://udacity-dend/log_data/2018/11/2018-11-01-events.json'"
       ]
      },
-     "execution_count": 36,
+     "execution_count": 38,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -123,7 +163,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 44,
    "metadata": {
     "editable": true
    },
@@ -134,16 +174,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "editable": true
-   },
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 45,
    "metadata": {
     "editable": true
    },
@@ -151,102 +182,59 @@
     {
      "data": {
       "text/plain": [
-       "\u001b[0;31mSignature:\u001b[0m \u001b[0mspark\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mread\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mjson\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mpath\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mschema\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;32mNone\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mprimitivesAsString\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;32mNone\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mprefersDecimal\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;32mNone\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mallowComments\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;32mNone\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mallowUnquotedFieldNames\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;32mNone\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mallowSingleQuotes\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;32mNone\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mallowNumericLeadingZero\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;32mNone\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mallowBackslashEscapingAnyCharacter\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;32mNone\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mmode\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;32mNone\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mcolumnNameOfCorruptRecord\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;32mNone\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mdateFormat\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;32mNone\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mtimestampFormat\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;32mNone\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mmultiLine\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;32mNone\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mallowUnquotedControlChars\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;32mNone\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mlineSep\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;32mNone\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0msamplingRatio\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;32mNone\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mdropFieldIfAllNull\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;32mNone\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mencoding\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;32mNone\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-       "\u001b[0;31mDocstring:\u001b[0m\n",
-       "Loads JSON files and returns the results as a :class:`DataFrame`.\n",
-       "\n",
-       "`JSON Lines <http://jsonlines.org/>`_ (newline-delimited JSON) is supported by default.\n",
-       "For JSON (one record per file), set the ``multiLine`` parameter to ``true``.\n",
-       "\n",
-       "If the ``schema`` parameter is not specified, this function goes\n",
-       "through the input once to determine the input schema.\n",
-       "\n",
-       ":param path: string represents path to the JSON dataset, or a list of paths,\n",
-       "             or RDD of Strings storing JSON objects.\n",
-       ":param schema: an optional :class:`pyspark.sql.types.StructType` for the input schema or\n",
-       "               a DDL-formatted string (For example ``col0 INT, col1 DOUBLE``).\n",
-       ":param primitivesAsString: infers all primitive values as a string type. If None is set,\n",
-       "                           it uses the default value, ``false``.\n",
-       ":param prefersDecimal: infers all floating-point values as a decimal type. If the values\n",
-       "                       do not fit in decimal, then it infers them as doubles. If None is\n",
-       "                       set, it uses the default value, ``false``.\n",
-       ":param allowComments: ignores Java/C++ style comment in JSON records. If None is set,\n",
-       "                      it uses the default value, ``false``.\n",
-       ":param allowUnquotedFieldNames: allows unquoted JSON field names. If None is set,\n",
-       "                                it uses the default value, ``false``.\n",
-       ":param allowSingleQuotes: allows single quotes in addition to double quotes. If None is\n",
-       "                                set, it uses the default value, ``true``.\n",
-       ":param allowNumericLeadingZero: allows leading zeros in numbers (e.g. 00012). If None is\n",
-       "                                set, it uses the default value, ``false``.\n",
-       ":param allowBackslashEscapingAnyCharacter: allows accepting quoting of all character\n",
-       "                                           using backslash quoting mechanism. If None is\n",
-       "                                           set, it uses the default value, ``false``.\n",
-       ":param mode: allows a mode for dealing with corrupt records during parsing. If None is\n",
-       "             set, it uses the default value, ``PERMISSIVE``.\n",
-       "\n",
-       "        * ``PERMISSIVE`` : when it meets a corrupted record, puts the malformed string                   into a field configured by ``columnNameOfCorruptRecord``, and sets other                   fields to ``null``. To keep corrupt records, an user can set a string type                   field named ``columnNameOfCorruptRecord`` in an user-defined schema. If a                   schema does not have the field, it drops corrupt records during parsing.                   When inferring a schema, it implicitly adds a ``columnNameOfCorruptRecord``                   field in an output schema.\n",
-       "        *  ``DROPMALFORMED`` : ignores the whole corrupted records.\n",
-       "        *  ``FAILFAST`` : throws an exception when it meets corrupted records.\n",
-       "\n",
-       ":param columnNameOfCorruptRecord: allows renaming the new field having malformed string\n",
-       "                                  created by ``PERMISSIVE`` mode. This overrides\n",
-       "                                  ``spark.sql.columnNameOfCorruptRecord``. If None is set,\n",
-       "                                  it uses the value specified in\n",
-       "                                  ``spark.sql.columnNameOfCorruptRecord``.\n",
-       ":param dateFormat: sets the string that indicates a date format. Custom date formats\n",
-       "                   follow the formats at ``java.text.SimpleDateFormat``. This\n",
-       "                   applies to date type. If None is set, it uses the\n",
-       "                   default value, ``yyyy-MM-dd``.\n",
-       ":param timestampFormat: sets the string that indicates a timestamp format. Custom date\n",
-       "                        formats follow the formats at ``java.text.SimpleDateFormat``.\n",
-       "                        This applies to timestamp type. If None is set, it uses the\n",
-       "                        default value, ``yyyy-MM-dd'T'HH:mm:ss.SSSXXX``.\n",
-       ":param multiLine: parse one record, which may span multiple lines, per file. If None is\n",
-       "                  set, it uses the default value, ``false``.\n",
-       ":param allowUnquotedControlChars: allows JSON Strings to contain unquoted control\n",
-       "                                  characters (ASCII characters with value less than 32,\n",
-       "                                  including tab and line feed characters) or not.\n",
-       ":param encoding: allows to forcibly set one of standard basic or extended encoding for\n",
-       "                 the JSON files. For example UTF-16BE, UTF-32LE. If None is set,\n",
-       "                 the encoding of input JSON will be detected automatically\n",
-       "                 when the multiLine option is set to ``true``.\n",
-       ":param lineSep: defines the line separator that should be used for parsing. If None is\n",
-       "                set, it covers all ``\\r``, ``\\r\\n`` and ``\\n``.\n",
-       ":param samplingRatio: defines fraction of input JSON objects used for schema inferring.\n",
-       "                      If None is set, it uses the default value, ``1.0``.\n",
-       ":param dropFieldIfAllNull: whether to ignore column of all null values or empty\n",
-       "                           array/struct during schema inference. If None is set, it\n",
-       "                           uses the default value, ``false``.\n",
-       "\n",
-       ">>> df1 = spark.read.json('python/test_support/sql/people.json')\n",
-       ">>> df1.dtypes\n",
-       "[('age', 'bigint'), ('name', 'string')]\n",
-       ">>> rdd = sc.textFile('python/test_support/sql/people.json')\n",
-       ">>> df2 = spark.read.json(rdd)\n",
-       ">>> df2.dtypes\n",
-       "[('age', 'bigint'), ('name', 'string')]\n",
-       "\n",
-       ".. versionadded:: 1.4\n",
-       "\u001b[0;31mFile:\u001b[0m      /opt/spark-2.4.3-bin-hadoop2.7/python/pyspark/sql/readwriter.py\n",
-       "\u001b[0;31mType:\u001b[0m      method\n"
+       "(15, 18)"
       ]
      },
+     "execution_count": 45,
      "metadata": {},
-     "output_type": "display_data"
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "?spark.read.json"
+    "df.shape"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 49,
    "metadata": {
     "editable": true
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "sdf = spark.read.json(sdlist[1])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 51,
+   "metadata": {
+    "editable": true
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "+--------------+---------+---------+------+-------------+--------+---------+-----+--------------------+------+--------+-----------------+---------+--------------------+------+-------------+--------------------+------+\n",
+      "|        artist|     auth|firstName|gender|itemInSession|lastName|   length|level|            location|method|    page|     registration|sessionId|                song|status|           ts|           userAgent|userId|\n",
+      "+--------------+---------+---------+------+-------------+--------+---------+-----+--------------------+------+--------+-----------------+---------+--------------------+------+-------------+--------------------+------+\n",
+      "|          null|Logged In|   Walter|     M|            0|    Frye|     null| free|San Francisco-Oak...|   GET|    Home|1.540919166796E12|       38|                null|   200|1541105830796|\"Mozilla/5.0 (Mac...|    39|\n",
+      "|          null|Logged In|   Kaylee|     F|            0| Summers|     null| free|Phoenix-Mesa-Scot...|   GET|    Home|1.540344794796E12|      139|                null|   200|1541106106796|\"Mozilla/5.0 (Win...|     8|\n",
+      "|       Des'ree|Logged In|   Kaylee|     F|            1| Summers|246.30812| free|Phoenix-Mesa-Scot...|   PUT|NextSong|1.540344794796E12|      139|        You Gotta Be|   200|1541106106796|\"Mozilla/5.0 (Win...|     8|\n",
+      "|          null|Logged In|   Kaylee|     F|            2| Summers|     null| free|Phoenix-Mesa-Scot...|   GET| Upgrade|1.540344794796E12|      139|                null|   200|1541106132796|\"Mozilla/5.0 (Win...|     8|\n",
+      "|       Mr Oizo|Logged In|   Kaylee|     F|            3| Summers|144.03873| free|Phoenix-Mesa-Scot...|   PUT|NextSong|1.540344794796E12|      139|             Flat 55|   200|1541106352796|\"Mozilla/5.0 (Win...|     8|\n",
+      "|    Tamba Trio|Logged In|   Kaylee|     F|            4| Summers|177.18812| free|Phoenix-Mesa-Scot...|   PUT|NextSong|1.540344794796E12|      139|Quem Quiser Encon...|   200|1541106496796|\"Mozilla/5.0 (Win...|     8|\n",
+      "|The Mars Volta|Logged In|   Kaylee|     F|            5| Summers|380.42077| free|Phoenix-Mesa-Scot...|   PUT|NextSong|1.540344794796E12|      139|           Eriatarka|   200|1541106673796|\"Mozilla/5.0 (Win...|     8|\n",
+      "+--------------+---------+---------+------+-------------+--------+---------+-----+--------------------+------+--------+-----------------+---------+--------------------+------+-------------+--------------------+------+\n",
+      "only showing top 7 rows\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "sdf.show(7)"
+   ]
   },
   {
    "cell_type": "code",
