--- a/etl.ipynb
+++ b/etl.ipynb
@@ -13,26 +13,26 @@
      "text": [
       "Collecting s3fs\n",
       "  Downloading https://files.pythonhosted.org/packages/72/5c/ec84c7ec49fde2c3b0d885ecae4504fa40fc77fef7684e9f2939c50f9b94/s3fs-0.4.0-py3-none-any.whl\n",
-      "Collecting botocore>=1.12.91 (from s3fs)\n",
-      "\u001b[?25l  Downloading https://files.pythonhosted.org/packages/64/4c/b0b0d3b6f84a05f9135051b56d3eb8708012a289c4b82ee21c8c766f47b5/botocore-1.14.9-py2.py3-none-any.whl (5.9MB)\n",
-      "\u001b[K    100% |████████████████████████████████| 5.9MB 5.1MB/s eta 0:00:01    52% |████████████████▊               | 3.1MB 28.3MB/s eta 0:00:01    95% |██████████████████████████████▋ | 5.6MB 29.4MB/s eta 0:00:01\n",
-      "\u001b[?25hCollecting fsspec>=0.6.0 (from s3fs)\n",
+      "Collecting fsspec>=0.6.0 (from s3fs)\n",
       "\u001b[?25l  Downloading https://files.pythonhosted.org/packages/dd/1f/7028dacd3c28f34ce48130aae73a88fa5cc27b6b0e494fcf2739f7954d9d/fsspec-0.6.2-py3-none-any.whl (62kB)\n",
-      "\u001b[K    100% |████████████████████████████████| 71kB 11.7MB/s ta 0:00:01\n",
+      "\u001b[K    100% |████████████████████████████████| 71kB 5.6MB/s ta 0:00:011\n",
+      "\u001b[?25hCollecting botocore>=1.12.91 (from s3fs)\n",
+      "\u001b[?25l  Downloading https://files.pythonhosted.org/packages/64/4c/b0b0d3b6f84a05f9135051b56d3eb8708012a289c4b82ee21c8c766f47b5/botocore-1.14.9-py2.py3-none-any.whl (5.9MB)\n",
+      "\u001b[K    100% |████████████████████████████████| 5.9MB 5.3MB/s eta 0:00:01    19% |██████▎                         | 1.1MB 28.1MB/s eta 0:00:01\n",
       "\u001b[?25hCollecting boto3>=1.9.91 (from s3fs)\n",
       "\u001b[?25l  Downloading https://files.pythonhosted.org/packages/d5/57/e9675a5a8d0ee586594ff19cb9a601334fbf24fa2fb29052d2a900ee5d23/boto3-1.11.9-py2.py3-none-any.whl (128kB)\n",
-      "\u001b[K    100% |████████████████████████████████| 133kB 21.9MB/s ta 0:00:01\n",
-      "\u001b[?25hRequirement already satisfied: jmespath<1.0.0,>=0.7.1 in /opt/conda/lib/python3.6/site-packages (from botocore>=1.12.91->s3fs) (0.9.3)\n",
+      "\u001b[K    100% |████████████████████████████████| 133kB 24.1MB/s ta 0:00:01\n",
+      "\u001b[?25hRequirement already satisfied: docutils<0.16,>=0.10 in /opt/conda/lib/python3.6/site-packages (from botocore>=1.12.91->s3fs) (0.14)\n",
+      "Requirement already satisfied: jmespath<1.0.0,>=0.7.1 in /opt/conda/lib/python3.6/site-packages (from botocore>=1.12.91->s3fs) (0.9.3)\n",
       "Requirement already satisfied: python-dateutil<3.0.0,>=2.1 in /opt/conda/lib/python3.6/site-packages (from botocore>=1.12.91->s3fs) (2.6.1)\n",
       "Requirement already satisfied: urllib3<1.26,>=1.20 in /opt/conda/lib/python3.6/site-packages (from botocore>=1.12.91->s3fs) (1.22)\n",
-      "Requirement already satisfied: docutils<0.16,>=0.10 in /opt/conda/lib/python3.6/site-packages (from botocore>=1.12.91->s3fs) (0.14)\n",
       "Collecting s3transfer<0.4.0,>=0.3.0 (from boto3>=1.9.91->s3fs)\n",
       "\u001b[?25l  Downloading https://files.pythonhosted.org/packages/c7/48/a8252b6b3cd31774eab312b19d58a6ac55f296240c206617dcd38cd93bf8/s3transfer-0.3.2-py2.py3-none-any.whl (69kB)\n",
-      "\u001b[K    100% |████████████████████████████████| 71kB 14.8MB/s ta 0:00:01\n",
+      "\u001b[K    100% |████████████████████████████████| 71kB 17.2MB/s ta 0:00:01\n",
       "\u001b[?25hRequirement already satisfied: six>=1.5 in /opt/conda/lib/python3.6/site-packages (from python-dateutil<3.0.0,>=2.1->botocore>=1.12.91->s3fs) (1.11.0)\n",
       "\u001b[31mawscli 1.16.17 has requirement botocore==1.12.7, but you'll have botocore 1.14.9 which is incompatible.\u001b[0m\n",
       "\u001b[31mawscli 1.16.17 has requirement s3transfer<0.2.0,>=0.1.12, but you'll have s3transfer 0.3.2 which is incompatible.\u001b[0m\n",
-      "Installing collected packages: botocore, fsspec, s3transfer, boto3, s3fs\n",
+      "Installing collected packages: fsspec, botocore, s3transfer, boto3, s3fs\n",
       "  Found existing installation: botocore 1.12.7\n",
       "    Uninstalling botocore-1.12.7:\n",
       "      Successfully uninstalled botocore-1.12.7\n",
@@ -348,36 +348,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
-   "metadata": {
-    "editable": true
-   },
-   "outputs": [],
-   "source": [
-    "sdf.createOrReplaceTempView(\"sdftab\")"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 26,
    "metadata": {
     "editable": true
    },
    "outputs": [],
    "source": [
-    "tdf = spark.sql(\"\"\"\n",
-    "    SELECT DISTINCT\n",
-    "    timestamp AS start_time,\n",
-    "    HOUR(timestamp) AS hour,\n",
-    "    DAY(timestamp) AS day,\n",
-    "    WEEKOFYEAR(timestamp) as week,\n",
-    "    MONTH(timestamp) as month,\n",
-    "    YEAR(timestamp) as year,\n",
-    "    DAYOFWEEK(timestamp) as weekday\n",
-    "    FROM\n",
-    "    sdftab\n",
-    "    ORDER BY 1\n",
-    "    \"\"\")"
+    "tdf = sdf.select(F.col(\"timestamp\").alias(\"start_time\"))\\\n",
+    "         .withColumn(\"hour\", F.hour(\"start_time\"))\\\n",
+    "         .withColumn(\"day\", F.dayofmonth(\"start_time\"))\\\n",
+    "         .withColumn(\"week\", F.weekofyear(\"start_time\"))\\\n",
+    "         .withColumn(\"month\", F.month(\"start_time\"))\\\n",
+    "         .withColumn(\"year\", F.year(\"start_time\"))\\\n",
+    "         .withColumn(\"weekday\", F.dayofweek(\"start_time\"))\\\n",
+    "         .orderBy(\"start_time\")"
    ]
   },
   {
