last commit before etl live trial

--- a/Data_Checks.ipynb
+++ b/Data_Checks.ipynb
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {
     "editable": true
    },
@@ -21,16 +21,38 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Requirement already satisfied: s3fs in /opt/conda/lib/python3.6/site-packages (0.4.0)\n",
-      "Requirement already satisfied: botocore>=1.12.91 in /opt/conda/lib/python3.6/site-packages (from s3fs) (1.14.9)\n",
-      "Requirement already satisfied: fsspec>=0.6.0 in /opt/conda/lib/python3.6/site-packages (from s3fs) (0.6.2)\n",
-      "Requirement already satisfied: boto3>=1.9.91 in /opt/conda/lib/python3.6/site-packages (from s3fs) (1.11.9)\n",
-      "Requirement already satisfied: python-dateutil<3.0.0,>=2.1 in /opt/conda/lib/python3.6/site-packages (from botocore>=1.12.91->s3fs) (2.6.1)\n",
+      "Collecting s3fs\n",
+      "  Downloading https://files.pythonhosted.org/packages/72/5c/ec84c7ec49fde2c3b0d885ecae4504fa40fc77fef7684e9f2939c50f9b94/s3fs-0.4.0-py3-none-any.whl\n",
+      "Collecting boto3>=1.9.91 (from s3fs)\n",
+      "\u001b[?25l  Downloading https://files.pythonhosted.org/packages/d5/57/e9675a5a8d0ee586594ff19cb9a601334fbf24fa2fb29052d2a900ee5d23/boto3-1.11.9-py2.py3-none-any.whl (128kB)\n",
+      "\u001b[K    100% |████████████████████████████████| 133kB 5.1MB/s ta 0:00:01\n",
+      "\u001b[?25hCollecting botocore>=1.12.91 (from s3fs)\n",
+      "\u001b[?25l  Downloading https://files.pythonhosted.org/packages/64/4c/b0b0d3b6f84a05f9135051b56d3eb8708012a289c4b82ee21c8c766f47b5/botocore-1.14.9-py2.py3-none-any.whl (5.9MB)\n",
+      "\u001b[K    100% |████████████████████████████████| 5.9MB 4.2MB/s eta 0:00:01\n",
+      "\u001b[?25hCollecting fsspec>=0.6.0 (from s3fs)\n",
+      "\u001b[?25l  Downloading https://files.pythonhosted.org/packages/dd/1f/7028dacd3c28f34ce48130aae73a88fa5cc27b6b0e494fcf2739f7954d9d/fsspec-0.6.2-py3-none-any.whl (62kB)\n",
+      "\u001b[K    100% |████████████████████████████████| 71kB 18.7MB/s ta 0:00:01\n",
+      "\u001b[?25hCollecting s3transfer<0.4.0,>=0.3.0 (from boto3>=1.9.91->s3fs)\n",
+      "\u001b[?25l  Downloading https://files.pythonhosted.org/packages/c7/48/a8252b6b3cd31774eab312b19d58a6ac55f296240c206617dcd38cd93bf8/s3transfer-0.3.2-py2.py3-none-any.whl (69kB)\n",
+      "\u001b[K    100% |████████████████████████████████| 71kB 19.4MB/s ta 0:00:01\n",
+      "\u001b[?25hRequirement already satisfied: jmespath<1.0.0,>=0.7.1 in /opt/conda/lib/python3.6/site-packages (from boto3>=1.9.91->s3fs) (0.9.3)\n",
       "Requirement already satisfied: urllib3<1.26,>=1.20 in /opt/conda/lib/python3.6/site-packages (from botocore>=1.12.91->s3fs) (1.22)\n",
-      "Requirement already satisfied: jmespath<1.0.0,>=0.7.1 in /opt/conda/lib/python3.6/site-packages (from botocore>=1.12.91->s3fs) (0.9.3)\n",
       "Requirement already satisfied: docutils<0.16,>=0.10 in /opt/conda/lib/python3.6/site-packages (from botocore>=1.12.91->s3fs) (0.14)\n",
-      "Requirement already satisfied: s3transfer<0.4.0,>=0.3.0 in /opt/conda/lib/python3.6/site-packages (from boto3>=1.9.91->s3fs) (0.3.2)\n",
-      "Requirement already satisfied: six>=1.5 in /opt/conda/lib/python3.6/site-packages (from python-dateutil<3.0.0,>=2.1->botocore>=1.12.91->s3fs) (1.11.0)\n"
+      "Requirement already satisfied: python-dateutil<3.0.0,>=2.1 in /opt/conda/lib/python3.6/site-packages (from botocore>=1.12.91->s3fs) (2.6.1)\n",
+      "Requirement already satisfied: six>=1.5 in /opt/conda/lib/python3.6/site-packages (from python-dateutil<3.0.0,>=2.1->botocore>=1.12.91->s3fs) (1.11.0)\n",
+      "\u001b[31mawscli 1.16.17 has requirement botocore==1.12.7, but you'll have botocore 1.14.9 which is incompatible.\u001b[0m\n",
+      "\u001b[31mawscli 1.16.17 has requirement s3transfer<0.2.0,>=0.1.12, but you'll have s3transfer 0.3.2 which is incompatible.\u001b[0m\n",
+      "Installing collected packages: botocore, s3transfer, boto3, fsspec, s3fs\n",
+      "  Found existing installation: botocore 1.12.7\n",
+      "    Uninstalling botocore-1.12.7:\n",
+      "      Successfully uninstalled botocore-1.12.7\n",
+      "  Found existing installation: s3transfer 0.1.13\n",
+      "    Uninstalling s3transfer-0.1.13:\n",
+      "      Successfully uninstalled s3transfer-0.1.13\n",
+      "  Found existing installation: boto3 1.9.7\n",
+      "    Uninstalling boto3-1.9.7:\n",
+      "      Successfully uninstalled boto3-1.9.7\n",
+      "Successfully installed boto3-1.11.9 botocore-1.14.9 fsspec-0.6.2 s3fs-0.4.0 s3transfer-0.3.2\n"
      ]
     }
    ],
@@ -49,7 +71,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {
     "editable": true
    },
@@ -73,7 +95,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {
     "editable": true
    },
@@ -89,7 +111,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {
     "editable": true
    },
@@ -195,12 +217,13 @@
     "editable": true
    },
    "source": [
-    "## Analyse user table"
+    "## Analyse user table\n",
+    "Apparently there are only 104 records, please also have at look at the readme.md concerning some restrictions of the user table."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 5,
    "metadata": {
     "editable": true
    },
@@ -211,7 +234,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 6,
    "metadata": {
     "editable": true
    },
@@ -239,15 +262,200 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
+   "metadata": {
+    "editable": true
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "104"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "userdf.count()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "editable": true
+   },
+   "source": [
+    "## Analyse time table\n",
+    "Apparently there ate 6820 unique timestamps in this dataframe, which were between Nov. 1st and Nov. 30th of 2018."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
    "metadata": {
     "editable": true
    },
    "outputs": [],
    "source": [
-    "userdf.count()\n",
-    "##check after all ran through\n"
+    "timedf = spark.read.parquet(\"s3a://christophndde4/time_table/\")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {
+    "editable": true
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "+--------------------+----+---+----+-----+----+-------+\n",
+      "|          start_time|hour|day|week|month|year|weekday|\n",
+      "+--------------------+----+---+----+-----+----+-------+\n",
+      "|2018-11-05 18:36:...|  18|  5|  45|   11|2018|      2|\n",
+      "|2018-11-05 18:37:...|  18|  5|  45|   11|2018|      2|\n",
+      "|2018-11-05 18:41:...|  18|  5|  45|   11|2018|      2|\n",
+      "|2018-11-05 18:41:...|  18|  5|  45|   11|2018|      2|\n",
+      "|2018-11-05 18:44:...|  18|  5|  45|   11|2018|      2|\n",
+      "+--------------------+----+---+----+-----+----+-------+\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "timedf.limit(5).show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {
+    "editable": true
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "6820"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "timedf.count()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {
+    "editable": true
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "+--------------------+--------------------+\n",
+      "|     min(start_time)|     max(start_time)|\n",
+      "+--------------------+--------------------+\n",
+      "|2018-11-01 21:01:...|2018-11-30 19:54:...|\n",
+      "+--------------------+--------------------+\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "timedf.agg(F.min(F.col(\"start_time\")), F.max(F.col(\"start_time\"))).show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "editable": true
+   },
+   "source": [
+    "## Analyse song table"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {
+    "editable": true
+   },
+   "outputs": [],
+   "source": [
+    "songdf = spark.read.parquet(\"s3a://christophndde4/song_table/\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {
+    "editable": true
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "+------------------+--------------------+------------------+----+---------+\n",
+      "|           song_id|               title|         artist_id|year| duration|\n",
+      "+------------------+--------------------+------------------+----+---------+\n",
+      "|SOAADAD12A8C13D5B0|One Shot (Album V...|ARQTC851187B9B03AF|2005|263.99302|\n",
+      "|SOABCEU12A8C132027|          Cold Waste|ARL6NP61187B98C1FC|2007|385.43628|\n",
+      "|SOABNPC12A8C13A9CC|       Après Le Show|ARFM1EQ1187FB533ED|2005| 223.4771|\n",
+      "|SOABWAP12A8C13F82A|           Take Time|AR5LMPY1187FB573FE|1978|258.89914|\n",
+      "|SOABYIT12AB0183026|        Vilda vindar|AR98ZSW1187B98E82C|1985|266.13506|\n",
+      "+------------------+--------------------+------------------+----+---------+\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "songdf.orderBy(\"song_id\").limit(5).show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {
+    "editable": true
+   },
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'song_df' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-19-9c765c166412>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0msong_df\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mcount\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m: name 'song_df' is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "songdf.count()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "editable": true
+   },
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
