--- a/etl.ipynb
+++ b/etl.ipynb
@@ -42,8 +42,8 @@
     "from pyspark.sql import SparkSession\n",
     "import pyspark.sql.functions as F\n",
     "from pyspark.sql.types import IntegerType, StringType, TimestampType\n",
-    "import boto3\n",
     "import pandas as pd\n",
+    "import boto3\n",
     "import gc\n",
     "!pip install s3fs"
    ]
@@ -115,74 +115,19 @@
     "editable": true
    },
    "source": [
-    "Initialize S3 buckets and gather informations about the json files, which have to be loaded afterwards."
+    "Empty target AWS S3 bucket in advance.<"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {
     "editable": true
    },
    "outputs": [],
    "source": [
-    "s3 = boto3.client(\"s3\", region_name=\"us-west-2\", \n",
-    "                  aws_access_key_id=os.environ['AWS_ACCESS_KEY_ID'],\n",
-    "                  aws_secret_access_key=os.environ['AWS_SECRET_ACCESS_KEY'])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {
-    "editable": true
-   },
-   "outputs": [],
-   "source": [
-    "searchobj = \"log_data\"\n",
-    "lcobj = list(s3.list_objects_v2(Bucket=\"udacity-dend\", \n",
-    "                                Prefix=searchobj + \"/\").values())"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {
-    "editable": true
-   },
-   "outputs": [],
-   "source": [
-    "log_data_list = []\n",
-    "for k in lcobj[2]:\n",
-    "    if k[\"Key\"].find(\".json\") > -1:\n",
-    "        log_data_list.append(\"s3a://udacity-dend/\" + k[\"Key\"])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
-   "metadata": {
-    "editable": true
-   },
-   "outputs": [],
-   "source": [
-    "searchobj = \"song_data\"\n",
-    "lcobj = list(s3.list_objects_v2(Bucket=\"udacity-dend\", \n",
-    "                                Prefix=searchobj + \"/\").values())"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 9,
-   "metadata": {
-    "editable": true
-   },
-   "outputs": [],
-   "source": [
-    "song_data_list = []\n",
-    "for k in lcobj[2]:\n",
-    "    if k[\"Key\"].find(\".json\") > -1:\n",
-    "        song_data_list.append(\"s3a://udacity-dend/\" + k[\"Key\"])"
+    "s3r = boto3.resource(\"s3\")\n",
+    "bucket = s3r.Bucket(\"christophndde4\").objects.all().delete()"
    ]
   },
   {
@@ -212,7 +157,7 @@
    ],
    "source": [
     "%%time\n",
-    "sdf = spark.read.json(log_data_list)"
+    "sdf = spark.read.format(\"json\").load(\"s3a://udacity-dend/log_data/*/*/*.json\")"
    ]
   },
   {
@@ -259,7 +204,7 @@
    ],
    "source": [
     "%%time\n",
-    "userdf.write.mode(\"overwrite\").parquet(\"s3a://christophndde4/user_table/\")"
+    "userdf.write.parquet(\"s3a://christophndde4/user_table/\")"
    ]
   },
   {
@@ -342,7 +287,7 @@
    ],
    "source": [
     "%%time\n",
-    "tdf.write.mode(\"overwrite\").parquet(\"s3a://christophndde4/time_table/\")"
+    "tdf.write.parquet(\"s3a://christophndde4/time_table/\")"
    ]
   },
   {
@@ -394,7 +339,7 @@
    ],
    "source": [
     "%%time\n",
-    "songstage_df = spark.read.json(song_data_list)"
+    "songstage_df = spark.read.format(\"json\").load(\"s3a://udacity-dend/song_data/*/*/*/*.json\")"
    ]
   },
   {
@@ -428,7 +373,7 @@
    ],
    "source": [
     "%%time\n",
-    "songsdf.write.mode(\"overwrite\").parquet(\"s3a://christophndde4/song_table/\")"
+    "songsdf.write.parquet(\"s3a://christophndde4/song_table/\")"
    ]
   },
   {
@@ -487,7 +432,7 @@
    ],
    "source": [
     "%%time\n",
-    "artistdf.write.mode(\"overwrite\").parquet(\"s3a://christophndde4/artist_table/\")"
+    "artistdf.write.parquet(\"s3a://christophndde4/artist_table/\")"
    ]
   },
   {
@@ -586,7 +531,7 @@
    ],
    "source": [
     "%%time\n",
-    "songplay_df.write.mode(\"overwrite\").parquet(\"s3a://christophndde4/songplay_table/\")"
+    "songplay_df.write.parquet(\"s3a://christophndde4/songplay_table/\")"
    ]
   },
   {
